# lf-automatizador

./: .gitignore  ACTUALIZAR-MOTOR-STREAM.bat  Iniciar automatizador 0.9.0.bat  Iniciar automatizador Linux.sh  Iniciar automatizador Windows.bat  database.js  instalar dependencias Linux.sh  instalar dependencias Windows.bat  instalar dependencias. 0.9.0.bat  instalar dependencias. 0.9.0.sh  main.js  package-lock.json  package.json
.github/workflows/: release.yml
audio-engine-rust/: Cargo.toml
audio-engine-rust/src/: main.rs
backend/: audio_analysis_worker.js  audio_engine_process.js  stream_proxy.js  waveform_worker.js
backend/ipc/: events.js  stream.js  windows.js
frontend/: about.html  audio_editor.js  audio_engine_client.js  cartwall.js  command_registry.js  encoder.html  encoder.js  index.html  jingle_editor.js  preview.js  render.js  settings.html  settings.js  shortcut_manager.js  style.css  task_manager.html  transition_editor.js
